# WORM-Library

./: .gitignore  1 Introduction.ipynb  1-Introduction.ipynb  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TESTING.md  WORM-Library.ipynb  execute_notebooks.py  pyproject.toml  test-requirements.txt  test_syntax_and_broken_images.ipynb
.claude/: settings.local.json
.ipynb_checkpoints/: TESTING-checkpoint.md  WORM-Library-checkpoint.ipynb  execute_notebooks-checkpoint.py  test-requirements-checkpoint.txt  test_notebooks-checkpoint.py
1-Introduction/: 1-Introduction.ipynb  2-Notebook-Intro.ipynb  Exploration-In-Geochemistry-(video).ipynb
2 WORM Library Demo/: 1-quartz-solubility.ipynb
2-Reaction-Properties/: 1-Reaction-Properties.ipynb  2-Activity-Diagrams-Part4.ipynb  2-Activity-Diagrams.ipynb  results.csv
3 Reaction Properties/: 1-CHNOSZ.ipynb
4-Thermodynamic-Property-Estimation/: Introduction-Aq-Organic-Estimator.ipynb  Introduction-Aq-Organic-Estimator.py
5-Thermodynamic-Property-Estimation/: Introduction-Aq-Organic-Estimator.ipynb
Demo-Workshop-Aq-Speciation/: mine_AMD.csv
WORKSHOP/: 2-Calculate_energy.ipynb  2-Calculate_energy_and_FAQ.ipynb  3-breakout_lab-grown_microbe.ipynb  4-breakout_lab-grown_microbe.ipynb  AdvWorkshopDemo.ipynb  Bonus-Features.ipynb  Breakout-Aq-Speciation.ipynb  Breakout.ipynb  FoEnDi_fluids.csv  FoEn_fluids.csv  Intro-to-Mass-Transfer-Albite.ipynb  Intro-to-Mass-Transfer-Diop.ipynb  Intro-to-Mass-Transfer-Enst.ipynb  Intro-to-Mass-Transfer-Forsterite.ipynb  Mass-Transfer-Features-FoEn.ipynb  S&C10vents.csv  data1  (+26 more)
(+2622 files in other folders)
